--- a/package.json
+++ b/package.json
@@ -6,15 +6,24 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^4.18.8",
+    "axios": "^0.26.0",
+    "babel-plugin-import": "^1.13.3",
+    "craco": "^0.0.3",
+    "craco-less": "^2.0.0",
+    "less": "^4.1.2",
+    "less-loader": "5",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "4.3.1",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
