--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "babel-plugin-import": "^1.13.3",
     "craco": "^0.0.3",
     "craco-less": "^2.0.0",
+    "echarts": "^5.3.1",
+    "echarts-for-react": "^3.0.2",
     "less": "^4.1.2",
     "less-loader": "5",
     "moment": "^2.29.1",
