--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "babel-plugin-import": "^1.13.3",
     "craco": "^0.0.3",
     "craco-less": "^2.0.0",
+    "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
     "echarts": "^5.3.1",
     "echarts-for-react": "^3.0.2",
     "less": "^4.1.2",
@@ -18,6 +20,7 @@
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-draft-wysiwyg": "^1.14.7",
     "react-router-dom": "4.3.1",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
